feat: Add linking modifier groups to menu items, update menu API, update swagger docs.
